--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://geunee92.github.io/my-suika-game/",
   "name": "suika-game",
   "private": true,
   "version": "0.0.0",
@@ -6,12 +7,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "matter-js": "^0.19.0"
   }
 }
